clusters/production/core/pihole/networking-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
