clusters/production/core/pihole/pihole-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: default
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - pi.rees.ca
  rules:
  - backendRefs:
    - name: pihole-web
      port: 80
